updated track my order | fix alignment

--- a/Application/foodago/css/style.css
+++ b/Application/foodago/css/style.css
@@ -785,13 +785,13 @@ ul.qty li p {
   color: #555;
 }
 .delivery {
-  margin-top: 3em;
+  margin-top: 0em;
 }
 .delivery p {
-  color: #A6A6A6;
+  color: black;
   font-size: 1em;
   font-weight: 400;
-  float: left;
+  
 }
 .delivery span {
   color: #A6A6A6;
